# qudata

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
configs/: cleansing_rules.yaml  labels.yaml  pipeline.yaml  quality.yaml  taxonomy.yaml  test_config.yaml
configs/configs/: pipeline.yaml
configs/templates/: academic-papers.yaml  basic-pipeline.yaml  code-documentation.yaml  enterprise-pipeline.yaml  web-content.yaml
docker/: entrypoint.sh  init-db.sql  postgres-prod.conf  postgres.conf  redis-prod.conf  redis.conf  supervisord.conf
docker/nginx/: nginx-prod.conf  nginx.conf
docs/api/: README.md  core-api.md  rest-api.md
docs/deployment/: docker-deployment.md  manual-deployment.md
docs/user-guide/: configuration-guide.md  data-formats-guide.md  faq.md  getting-started.md  pipeline-guide.md  troubleshooting.md
examples/: advanced_preprocessing_demo.py  ai_integration_examples.py  api_gateway_demo.py  basic_pipeline_demo.py  command_line_tutorial.py  complete_beginner_guide.py  content_segmentation_demo.py  language_detection_demo.py  ocr_demo.py  performance_optimization_demo.py  real_world_scenarios.py  streaming_demo.py  web_scraping_demo.py
scripts/: deploy.sh  pre_publish_analysis.py  upload_to_testpypi.py
src/qudata/: __init__.py  cli.py  config.py  models.py  pipeline.py
tests/: create_sample_ocr_data.py  create_sample_pdfs.py  run_comprehensive_validation_tests.py
tests/benchmarks/: performance_benchmarks.py
tests/integration/: test_database_warehousing_integration.py  test_full_pipeline.py  test_ocr_integration.py  test_streaming_integration.py
tests/unit/: test_advanced_preprocessing.py  test_analysis_engine.py  test_api_client.py  test_api_gateway.py  test_basic.py  test_boilerplate_removal.py  test_cleaning_pipeline.py  test_comprehensive_preprocessing.py  test_comprehensive_validation.py  test_config.py  test_content_segmentation.py  test_database_basic.py  test_database_connector.py  test_database_extractors.py  test_database_warehousing.py  test_deduplication.py  test_document_extraction.py  test_entity_recognition.py  test_models.py  (+21 more)
(+108 files in other folders)
